--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,8 @@
             <nav class="home_nav">
               <ul>
                <li><%= link_to "Funding Overview", fundings_url %></li>
-               <li><%= link_to "Industries", "/industries" %></li>
-               <li><%= link_to "Geographies", "/locations" %></li>
+               <li><%= link_to "Industry Funding", "/industries" %></li>
+               <li><%= link_to "Geographic Funding", "/locations" %></li>
                <li><%= link_to "Angel Investing", "/individuals" %></li>
                <li><%= link_to "About", "/individuals" %></li>
               </ul>
