--- a/app/views/fundings/_funding_donut.html.erb
+++ b/app/views/fundings/_funding_donut.html.erb
@@ -1,13 +1,17 @@
 <% industry_array= Array.new %>
-<% a = Funding.annual_fundings(2011) %>
+<% a = Funding.ltm_fundings(365) %>
 <% total_funding = a.sum('funding_amount') %>
 
-<% Industry.order('name ASC').each do |industry| %>
-    <% industry_name = industry.name.titleize %>
-    <% percent = a.for_industry(industry.id).sum('funding_amount') / total_funding %>
-    <% industry_array << {label: industry_name , value: (percent*100).round(0) } %>
+<div>
 
+<% Industry.order('name ASC').each do |industry| %>
+      <% industry_name = industry.name.titleize %>
+      <% percent = a.for_industry(industry.id).sum('funding_amount') / total_funding %>
+    <% industry_array << {label: industry_name , value: (percent*100).round(0) } %>
 <% end %>
+
+
+</div>
 
 
 <% j_industry_array = industry_array.to_json %>
